--- a/index.ipynb
+++ b/index.ipynb
@@ -127,12 +127,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Italy'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "Italy = countries[9] # 'Italy'\n",
-    "italy"
+    "Italy"
    ]
   },
   {
