Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -136,14 +136,14 @@
        "'Italy'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Italy = countries[9] # 'Italy'\n",
-    "Italy"
+    "italy = countries[9] # 'Italy'\n",
+    "italy"
    ]
   },
   {
