--- a/index.ipynb
+++ b/index.ipynb
@@ -430,7 +430,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_countries = None"
+    "unique_countries = set"
    ]
   },
   {
